@@ -15,8 +15,9 @@ Bugs fixed:
 - 1751084 Fixed sfcb does not support a hostname in an objectpath
 - 1759208 Fixed internalProvider segfaults when object not found
 - 1752715 Fixed sfcb does not unescape incoming blanks
-- 1754811 Fixed sfbb misses refences/referenceNames call in certain upcalls
+- 1754811 Fixed sfcb misses refences/referenceNames call in certain upcalls
 - 1763178 Fixed GetClass operation failure
+- 1746659 Fixed SFCB segfaults when ai commands are issued simultaneously
 
 Changes in 1.2.3
 ================
